# ot-budjetointisovellus

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: arkkitehtuurikuvaus.md  changelog.md  käyttöohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py  ui.py
src/entities/: budget.py  expense.py
src/repositories/: budgeting_repository.py  user_repository.py
src/services/: budgeting_service.py  login_service.py  user_service.py
src/tests/: budgeting_repository_test.py  login_service_test.py
src/tests/repositories/: budgeting_repository_test.py  user_repository_test.py
src/tests/services/: budgeting_service_test.py  user_service_test.py
src/ui/: budget_view.py  budgeting_view.py  create_user_view.py  login_view.py  start_view.py  ui.py
